@@ -1,3 +1,6 @@
+02Oct01=======================================================================
+1. fixed the 'ever lengthening msg' syndrome and probably made the whole
+thing more reliable at the same time.
 01Oct01=======================================================================
 1. made login info not the default
 2. change the looping protoection for PC16/17/19/21 and also be more rigorous
